change constant name

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <button class="reset">RESET</button>
         <input type="text" />
         <button class="button">START</button>
-        <div class="vowelName">VOWEL SUM</div>
+        <div class="vowelName">VOWELS SUM</div>
         <div class="vowel">0</div>
-        <div class="constantName">CONSTANT SUM</div>
+        <div class="constantName">CONSONANTS SUM</div>
         <div class="constant">0</div>
       </div>
     </div>
