html and js changing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="parent2">
         <button class="reset">RESET</button>
         <input type="text" />
-        <button class="button">START</button>
+        <button class="start">START</button>
         <div class="vowelName">VOWELS SUM</div>
         <div class="vowel">0</div>
         <div class="constantName">CONSONANTS SUM</div>
